--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -24,6 +24,7 @@ decorator==5.1.1
 defusedxml==0.7.1
 distro==1.9.0
 docopt==0.6.2
+dotenv==0.9.9
 executing==2.1.0
 fastjsonschema==2.21.1
 fonttools==4.55.3
@@ -84,6 +85,7 @@ PyJWT==2.8.0
 pyparsing==3.2.0
 PyPDF2==3.0.1
 python-dateutil==2.9.0.post0
+python-dotenv==1.1.0
 pytz==2024.2
 pyvis==0.3.2
 pywin32==308
